# virtiofsd

./: 50-virtiofsd.json  Cargo.toml  README.md
src/: descriptor_utils.rs  file_traits.rs  filesystem.rs  fs_cache_req_handler.rs  fuse.rs  idmap.rs  lib.rs  limits.rs  main.rs  oslib.rs  sandbox.rs  seccomp.rs  server.rs  util.rs
src/passthrough/: credentials.rs  file_handle.rs  mod.rs  stat.rs  xattrmap.rs
