[package]
name = "virtiofsd"
description = "A virtio-fs vhost-user device daemon"
version = "1.5.0"
authors = ["The Virtiofs Project Developers"]
edition = "2018"
homepage = "https://virtio-fs.gitlab.io/"
repository = "https://gitlab.com/virtio-fs/virtiofsd"
license = "Apache-2.0 AND BSD-3-Clause"
readme = "README.md"

exclude = [".gitlab-ci.yml"]

[dependencies]
bitflags = "1.2"
capng = "0.2.2"
env_logger = "0.8.4"
futures = { version = "0.3", features = ["thread-pool"] }
libc = "~0.2.120"
log = "0.4"
libseccomp-sys = "0.2"
structopt = "0.3"
vhost-user-backend = "0.7.0"
vhost = "0.5.0"
virtio-bindings = { version = "0.1", features = ["virtio-v5_0_0"] }
vm-memory = { version = ">=0.7", features = ["backend-mmap", "backend-atomic"] }
virtio-queue = "0.6.1"
vmm-sys-util = "0.10"
syslog = "6.0"

[profile.release]
lto = true
