[package]
name = "virtiofsd"
description = "A virtio-fs vhost-user device daemon"
version = "1.7.0"
authors = ["The Virtiofs Project Developers"]
edition = "2018"
homepage = "https://virtio-fs.gitlab.io/"
repository = "https://gitlab.com/virtio-fs/virtiofsd"
license = "Apache-2.0 AND BSD-3-Clause"
readme = "README.md"

exclude = [".gitlab-ci.yml"]

[dependencies]
bitflags = "1.2"
capng = "0.2.2"
env_logger = "0.8.4"
futures = { version = "0.3", features = ["thread-pool"] }
libc = "0.2.139"
log = "0.4"
libseccomp-sys = "0.2"
structopt = "0.3"
vhost-user-backend = "0.10.0"
vhost = "0.8.1"
virtio-bindings = { version = "0.2", features = ["virtio-v5_0_0"] }
vm-memory = { version = "0.12.0", features = ["backend-mmap", "backend-atomic"] }
virtio-queue = "0.9.0"
vmm-sys-util = "0.11.1"
syslog = "6.0"

[profile.release]
lto = true
